0.35.0:
- general:
  - Cmake-based build machinery contributed by Marco Barbone

- nufft:
  - faster 1D transforms due to batched calculation of kernel coefficients
    (inspired by FINUFFT)

- misc:
  - new functions `available_hardware_threads`, `thread_pool_size`, and
    `resize_thread_pool` in `ducc0.misc` to allow determination of hardware
    resources and influencing thread pool size at run time. Up to now, the size
    of the thread pool was set at startup and could not be influenced later on.

- wgridder:
  - slightly accelerated evaluation of kernel functions by using kernel
    symmetry
  - extended internal C++ interface to allow easier support for different
    conventions. (This change is not visible from Python.)

- pointingprovider:
  - quaternions passed to the constructor are now assumed to repeat
    periodically, i.e. output can now be requested for any point in time


0.34.0:
- nufft:
  - allow different periodicities for every coordinate axis

- misc:
  - significant improvements (and broken interfaces) in the mode-coupling
    matrix code


0.33.0:
- general:
  - slightly modernized Python build system
  - if the environment variable DUCC0_NUM_THREADS is not set, the code will
    try to read OMP_NUM_THREADS to determine the maximum number of threads
    to use.
  - semantics of ducc0::v(f)mav have changed: if the v(f)mav is const,the data
    it points to can still be changed. If immutability of pointed-to data is
    required, the object needs to be cast/converted to a c(f)mav.

- sht:
  - make functions from `ducc0.sht.experimental` also available in
    `ducc0.sht`. The interface should have matured sufficiently by now.

- wgridder:
  - bug fix for large fields of view that extend beyond the horizon
  - make functions `vis2dirty` and `dirty2vis` from
    `ducc0.wgridder.experimental` also available in `ducc0.wgridder`.
    The interface should have matured sufficiently by now.

- misc: